<resources>
    <string name="app_name">ePOS2_CashChanger</string>
    <string name="action_settings">Settings</string>
    <string name="tab_connect">connect</string>
    <string name="tab_setConfig">setConfig</string>
    <string name="tab_deposit">deposit</string>
    <string name="tab_dispenseChange">dispenseChange</string>
    <string name="tab_dispenseCash">dispenseCash</string>
    <string name="tab_cashCount">cashCount</string>
    <string name="tab_collect">collect</string>
    <string name="tab_drawer">drawer</string>
    <string name="tab_command">command</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_clear">Clear</string>
    <string name="button_setCountMode">SetCountMode</string>
    <string name="button_setLeftCash">SetLeftCash</string>
    <string name="button_begin">Begin</string>
    <string name="button_pause">Pause</string>
    <string name="button_restart">Restart</string>
    <string name="button_end">End</string>
    <string name="button_dispenseChange">DispenseChange</string>
    <string name="button_dispenseCash">DispenseCash</string>
    <string name="button_readCashCount">ReadCashCount</string>
    <string name="button_collectCash">CollectCash</string>
    <string name="button_openDrawer">OpenDrawer</string>
    <string name="button_sendCommand">SendCommand</string>
    <string name="button_sendDirectIOCommand">SendDirectIOCommand</string>
    <string name="text_target">Target</string>
    <string name="text_countMode">CountMode</string>
    <string name="text_coins">Coins</string>
    <string name="text_bills">Bills</string>
    <string name="text_config">Config</string>
    <string name="text_data">Data</string>
    <string name="text_jpy1">jpy1</string>
    <string name="text_jpy5">jpy5</string>
    <string name="text_jpy10">jpy10</string>
    <string name="text_jpy50">jpy50</string>
    <string name="text_jpy100">jpy100</string>
    <string name="text_jpy500">jpy500</string>
    <string name="text_jpy1000">jpy1000</string>
    <string name="text_jpy2000">jpy2000</string>
    <string name="text_jpy5000">jpy5000</string>
    <string name="text_jpy10000">jpy10000</string>
    <string name="text_collectType">Collect Type</string>
    <string name="text_command">Command</string>
    <string name="text_string">String</string>
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>
    <string name="title_msg_oposCode">OPOS CODE</string>
    <string name="countMode_manualInput">Manual input</string>
    <string name="countMode_autoCount">Auto count</string>
    <string name="deposit_change">Change</string>
    <string name="deposit_no_change">No change</string>
    <string name="deposit_repay">Repay</string>
    <string name="collect_all_cash">All cash</string>
    <string name="collect_part_of_cash">Part of cash</string>
</resources>
