<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.epson.epos2_cashchanger.MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_jpy1" />

            <EditText
                android:id="@+id/editText_jpy1"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_jpy5" />

            <EditText
                android:id="@+id/editText_jpy5"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_jpy10" />

            <EditText
                android:id="@+id/editText_jpy10"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_jpy50" />

            <EditText
                android:id="@+id/editText_jpy50"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_jpy100" />

            <EditText
                android:id="@+id/editText_jpy100"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_jpy500" />

            <EditText
                android:id="@+id/editText_jpy500"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_jpy1000" />

            <EditText
                android:id="@+id/editText_jpy1000"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_jpy2000" />

            <EditText
                android:id="@+id/editText_jpy2000"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_jpy5000" />

            <EditText
                android:id="@+id/editText_jpy5000"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_jpy10000" />

            <EditText
                android:id="@+id/editText_jpy10000"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="0" />
        </LinearLayout>

        <Button
            android:id="@+id/button_dispenseCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_dispenseCash" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_clear" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/textView_dispenseCashText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
